# ResearchCrafters

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  SCAFFOLD.md  agents.md  claude.md  console-log.txt  docker-compose.yml  lighthouserc.json  lighthouserc.notes.md  package.json  playwright.config.ts  pnpm-lock.yaml
.claude/: settings.json
TODOS/: 00-roadmap.md  01-mvp-platform.md  02-erp-content-package.md  03-cli-runner.md  04-validation-evaluator.md  05-mentor-safety.md  06-data-access-analytics.md  07-alpha-launch.md  08-infra-foundations.md  09-frontend-design.md  10-integration-quality-gaps.md  11-learning-modules-math-writing.md  PROGRESS.md  README.md
apps/: README.md
apps/erp-agent/: README.md  config.example.toml  pyproject.toml
apps/erp-agent/src/researchcrafters_erp_agent/: __init__.py  cli.py  config.py  inputs.py  logging.py  manifest.py  report.py  scaffold.py  validation.py  workflow.py
apps/erp-agent/tests/: test_agent.py
backlog/: 00-roadmap.md  01-mvp-platform.md  02-erp-content-package.md  03-cli-runner.md  04-validation-evaluator.md  05-mentor-safety.md  06-data-access-analytics.md  07-alpha-launch.md  08-infra-foundations.md  09-frontend-design.md  10-integration-quality-gaps.md  11-learning-modules-math-writing.md  12-agentic-erp-reconstruction.md  PROGRESS.md  README.md
content/: README.md
docs/: ALPHA_PERSONA.md  FRONTEND.md  LOCAL_HOSTING.md  MARKETING.md  PITCH.md  PRD.md  PRD_v2.md  RESEARCH_NOTES.md  TECHNICAL.md  TELEGRAM_NOTIFICATIONS.md
infra/: README.md
qa/: README.md  alpha-access-gate-2026-05-15.md  (+72 more)
(+227 files in other folders)
