[project]
name = "researchcrafters-erp-agent"
version = "0.1.0"
description = "Local agentic authoring accelerator for draft ResearchCrafters ERP packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
erp-agent = "researchcrafters_erp_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researchcrafters_erp_agent"]
